--- a/about.html
+++ b/about.html
@@ -1,12 +1,138 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/d5cb4471ec.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="./img/bg.jpg" type="image/x-icon">
+    <title>Jerush Lamshal</title>
 </head>
+
 <body>
-    <a href="index.html">GO TO HOME PAGE!</a>
+
+    <!-- navbar section -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+            <a class="navbar-brand" href="#">Jerush Lamshal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="resume.html">Resume</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <a class="btn btn-primary btn-sm me-2 " href="https://twitter.com/JerushaLamsal" role="button"> <i
+                            class="fa-brands fa-twitter"></i> </a>
+
+                    <a class="btn btn-primary btn-sm me-2 " href="https://www.instagram.com/jeraa_don/" role="button">
+                        <i class="fa-brands fa-instagram"></i> </a>
+
+                    <a class="btn btn-primary btn-sm me-2 "
+                        href="https://www.linkedin.com/in/jerusha-lamsal/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BVyQFW13WTs%2Bo03IdLMRZBw%3D%3D"
+                        role="button"> <i class="fa-brands fa-linkedin"></i> </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- breadcrumb section -->
+  <section class="" style="background: #f2f2f6;">
+    <div class="container py-5">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="skills.html">Skills</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Skills</li>
+            </ol>
+        </nav>
+    </div>
+  </section>
+    <!-- breadcrumb section -->
+
+    <!-- navbar section -->
+  
+<!-- about section -->
+<section class="py-5 bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non mauris vitae erat consequat auctor eu in elit. Nullam at scelerisque urna. Nullam at scelerisque urna. Nullam at scelerisque urna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non mauris vitae erat consequat auctor eu in elit. Nullam at scelerisque urna. Nullam at scelerisque urna. Nullam at scelerisque urna.</p>
+            </div>
+            <div class="col-lg-6">
+                <img src="img/jerush Lamshal.png" alt="About Me" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<footer class="bg-white">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                <h3>Jerush Lamshal</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
+                    commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
+                    dicta dolor magni modi exercitationem!</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                <h3 class="">Quick Links</h3>
+                <ul class="list-unstyled ">
+                    <li><a class="text-decoration-none" href="index.html">Home</a></li>
+                    <li><a class="text-decoration-none" href="about.html">About</a></li>
+                    <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
+                    <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                <h3>Contact</h3>
+                <ul class="list-unstyled">
+                    <li><i class="fa fa-map-marker"></i> Address: 123 Main St, City, Country</li>
+                    <li><i class="fa fa-phone"></i> Phone: +1 234 567 890</li>
+                    <li><i class="fa fa-envelope"></i> Email: info@example.com</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script>
+    var typingEffect = new Typed(".multiText", {
+        strings: ["front-end developer", "coder", "designer"],
+        loop: true,
+        typeSpeed: 100,
+        backSpeed: 80,
+        backDelay: 1500
+    })
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
