--- a/index.html
+++ b/index.html
@@ -1,61 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website With Typing Effect</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/d5cb4471ec.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="./img/bg.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/bg.jpg" type="image/x-icon">
+    <title>Jerush Lamshal</title>
 </head>
+
 <body>
-   <div class="container">
-    <nav>
-        <div class="logo">folio<b>.</b></div>
-    <ul class="navItems">
-        <li><a href="#">home</a></li>
-        <li><a href="about.html">about</a></li>
-        <li><a href="skills.html">skills</a></li>
-        <li><a href="blog.html">blog</a></li>
-    </ul>
 
-    <div class="links">
-        <a href="https://www.linkedin.com/in/jerusha-lamsal/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BVyQFW13WTs%2Bo03IdLMRZBw%3D%3D" target="_blank" class="fa fa-linkedin"></a>
-        <a href="https://www.instagram.com/jeraa_don/" target="_blank" class="fa fa-instagram"></a>
-             <a href="https://twitter.com/JerushaLamsal" target="_blank" class="fa fa-twitter"></a>
-    </div>
+    <!-- navbar section -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+            <a class="navbar-brand" href="#">Jerush Lamshal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="resume.html">Resume</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <a class="btn btn-primary btn-sm me-2 " href="https://twitter.com/JerushaLamsal" role="button"> <i
+                            class="fa-brands fa-twitter"></i> </a>
+
+                    <a class="btn btn-primary btn-sm me-2 " href="https://www.instagram.com/jeraa_don/" role="button">
+                        <i class="fa-brands fa-instagram"></i> </a>
+
+                    <a class="btn btn-primary btn-sm me-2 "
+                        href="https://www.linkedin.com/in/jerusha-lamsal/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BVyQFW13WTs%2Bo03IdLMRZBw%3D%3D"
+                        role="button"> <i class="fa-brands fa-linkedin"></i> </a>
+                </div>
+            </div>
+        </div>
     </nav>
+    <!-- navbar section -->
 
-    <div class="wrapper">
-        <div class="cols cols0">
-            <span class="topline">Hello</span>
-            <h1>I'm <span class="multiText"></span></h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, iure repellendus qui dolore, minima culpa iste facere, vero consequuntur impedit quibusdam aliquid eaque eligendi! Alias id dolor earum quod maiores.</p>
-            <div class="btns">
-                <button>download CV</button>
-                <button>hire me</button>
+    <section class="bg-light">
+        <div class="container py-5">
+            <div class="row bg-light">
+                <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
+                    <span class="topline">Hello</span>
+                    <h1>I'm <span class="multiText text-danger"></span></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
+                        commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
+                        dicta dolor magni modi exercitationem!</p>
+                    <div class="d-flex">
+                        <a class="btn btn-primary btn-sm me-2" download href="img/bg.jpg" role="button">download CV </a>
+                        <a class="btn btn-primary btn-sm me-2" href="#" role="button"> Hire Me</a>
+                        <a class="btn btn-primary btn-sm me-2" href="about.html" role="button"> About Me</a>
+                    </div>
+                </div>
+
+                <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
+                    <div class="">
+                        <img src="img//jerush Lamshal.png" class="img-thumbnail w-100" alt="...">
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
 
-        <div class="cols cols1">
-            <div class="imgbox">
-            
-                <img src="img\bg.jpg" >
+    <footer class="bg-white">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h3>Jerush Lamshal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
+                        commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
+                        dicta dolor magni modi exercitationem!</p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h3 class="">Quick Links</h3>
+                    <ul class="list-unstyled ">
+                        <li><a class="text-decoration-none" href="index.html">Home</a></li>
+                        <li><a class="text-decoration-none" href="about.html">About</a></li>
+                        <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
+                        <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h3>Contact</h3>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-map-marker"></i> Address: 123 Main St, City, Country</li>
+                        <li><i class="fa fa-phone"></i> Phone: +1 234 567 890</li>
+                        <li><i class="fa fa-envelope"></i> Email: info@example.com</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-   </div>
-   
-   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-   <script>
-    var typingEffect = new Typed(".multiText",{
-        strings:["front-end developer","coder","designer"],
-        loop:true,
-        typeSpeed :100,
-        backSpeed:80,
-        backDelay:1500
-    })
-   </script>
+    </footer>
+
+  
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+        var typingEffect = new Typed(".multiText", {
+            strings: ["front-end developer", "coder", "designer","UI/UX Designer"],
+            loop: true,
+            typeSpeed: 100,
+            backSpeed: 80,
+            backDelay: 1500
+        })
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
