update All pages

--- a/about.html
+++ b/about.html
@@ -55,84 +55,89 @@
     </nav>
 
     <!-- breadcrumb section -->
-  <section class="" style="background: #f2f2f6;">
-    <div class="container py-5">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="skills.html">Skills</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Skills</li>
-            </ol>
-        </nav>
-    </div>
-  </section>
+    <section class="" style="background: #f2f2f6;">
+        <div class="container py-5">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="skills.html">Skills</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Skills</li>
+                </ol>
+            </nav>
+        </div>
+    </section>
     <!-- breadcrumb section -->
 
     <!-- navbar section -->
-  
-<!-- about section -->
-<section class="py-5 bg-light">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non mauris vitae erat consequat auctor eu in elit. Nullam at scelerisque urna. Nullam at scelerisque urna. Nullam at scelerisque urna.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non mauris vitae erat consequat auctor eu in elit. Nullam at scelerisque urna. Nullam at scelerisque urna. Nullam at scelerisque urna.</p>
-            </div>
-            <div class="col-lg-6">
-                <img src="img/jerush Lamshal.png" alt="About Me" class="img-fluid">
-            </div>
-        </div>
-    </div>
-</section>
 
+    <!-- about section -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>About Me</h2>
+                    <p>Hi! I'm Jerusha Lamsal.
+                    </p>
 
-<footer class="bg-white">
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                <h3>Jerush Lamshal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
-                    commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
-                    dicta dolor magni modi exercitationem!</p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                <h3 class="">Quick Links</h3>
-                <ul class="list-unstyled ">
-                    <li><a class="text-decoration-none" href="index.html">Home</a></li>
-                    <li><a class="text-decoration-none" href="about.html">About</a></li>
-                    <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
-                    <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                <h3>Contact</h3>
-                <ul class="list-unstyled">
-                    <li><i class="fa fa-map-marker"></i> Address: 123 Main St, City, Country</li>
-                    <li><i class="fa fa-phone"></i> Phone: +1 234 567 890</li>
-                    <li><i class="fa fa-envelope"></i> Email: info@example.com</li>
-                </ul>
+                    <p>I'm a web developer from Pokhara, Nepal, with a passion for playing with
+                        computers. I have interests in developing, designing, trekking, hiking, and surfing the
+                        internet. Personally, I'm best at learning new technologies, management, and documentation. I
+                        excel in researching new ideas and managing technologies to bring up solutions. I enjoy working
+                        in a team that entertains themselves and focuses on self-education.</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/jerush Lamshal.png" alt="About Me" class="img-fluid">
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </section>
+
+    <footer class="bg-white">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h5>Jerush Lamshal</h5>
+                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                        designing, with a strong focus on learning new technologies and effective management. I excel in
+                        researching innovative solutions and enjoy collaborative team environments.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h5 class="">Quick Links</h5>
+                    <ul class="list-unstyled ">
+                        <li><a class="text-decoration-none" href="index.html">Home</a></li>
+                        <li><a class="text-decoration-none" href="about.html">About</a></li>
+                        <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
+                        <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <h5>Contact</h5>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
+                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
+                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
-<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-<script>
-    var typingEffect = new Typed(".multiText", {
-        strings: ["front-end developer", "coder", "designer"],
-        loop: true,
-        typeSpeed: 100,
-        backSpeed: 80,
-        backDelay: 1500
-    })
-</script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+        var typingEffect = new Typed(".multiText", {
+            strings: ["front-end developer", "coder", "designer", "UI/UX Designer"],
+            loop: true,
+            typeSpeed: 100,
+            backSpeed: 80,
+            backDelay: 1500
+        })
+    </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
