--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <a class="nav-link" href="resume.html">Resume</a>
                     </li>
                 </ul>
+
                 <div class="d-flex">
                     <a class="btn btn-primary btn-sm me-2 " href="https://twitter.com/JerushaLamsal" role="button"> <i
                             class="fa-brands fa-twitter"></i> </a>
@@ -61,11 +62,16 @@
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <span class="topline">Hello</span>
                     <h1>I'm <span class="multiText text-danger"></span></h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
-                        commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
-                        dicta dolor magni modi exercitationem!</p>
+                    <p>Hi! I'm Jerusha Lamsal.
+                    </p>
+
+                    <p>I'm a web developer from Pokhara, Nepal, with a passion for playing with
+                        computers. I have interests in developing, designing, trekking, hiking, and surfing the
+                        internet. Personally, I'm best at learning new technologies, management, and documentation. I
+                        excel in researching new ideas and managing technologies to bring up solutions. I enjoy working
+                        in a team that entertains themselves and focuses on self-education.</p>
                     <div class="d-flex">
-                        <a class="btn btn-primary btn-sm me-2" download href="img/bg.jpg" role="button">download CV </a>
+                        <a class="btn btn-primary btn-sm me-2" download href="resume.html" role="button">Resume </a>
                         <a class="btn btn-primary btn-sm me-2" href="#" role="button"> Hire Me</a>
                         <a class="btn btn-primary btn-sm me-2" href="about.html" role="button"> About Me</a>
                     </div>
@@ -80,42 +86,43 @@
         </div>
     </section>
 
+
     <footer class="bg-white">
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3>Jerush Lamshal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
-                        commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
-                        dicta dolor magni modi exercitationem!</p>
+                    <h5>Jerush Lamshal</h5>
+                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                        designing, with a strong focus on learning new technologies and effective management. I excel in
+                        researching innovative solutions and enjoy collaborative team environments.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3 class="">Quick Links</h3>
+                    <h5 class="">Quick Links</h5>
                     <ul class="list-unstyled ">
                         <li><a class="text-decoration-none" href="index.html">Home</a></li>
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
-                        <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
+                        <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3>Contact</h3>
+                    <h5>Contact</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Address: 123 Main St, City, Country</li>
-                        <li><i class="fa fa-phone"></i> Phone: +1 234 567 890</li>
-                        <li><i class="fa fa-envelope"></i> Email: info@example.com</li>
+                        <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
+                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
+                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
 
-  
+
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings: ["front-end developer", "coder", "designer","UI/UX Designer"],
+            strings: ["front-end developer", "coder", "designer", "UI/UX Designer"],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
