--- a/skills.html
+++ b/skills.html
@@ -104,38 +104,38 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3>Jerush Lamshal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cupiditate et repellendus
-                        commodi nam ad earum aperiam tempore enim suscipit asperiores ratione quod incidunt dolorem
-                        dicta dolor magni modi exercitationem!</p>
+                    <h5>Jerush Lamshal</h5>
+                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                        designing, with a strong focus on learning new technologies and effective management. I excel in
+                        researching innovative solutions and enjoy collaborative team environments.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3 class="">Quick Links</h3>
+                    <h5 class="">Quick Links</h5>
                     <ul class="list-unstyled ">
                         <li><a class="text-decoration-none" href="index.html">Home</a></li>
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
-                        <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
+                        <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h3>Contact</h3>
+                    <h5>Contact</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Address: 123 Main St, City, Country</li>
-                        <li><i class="fa fa-phone"></i> Phone: +1 234 567 890</li>
-                        <li><i class="fa fa-envelope"></i> Email: info@example.com</li>
+                        <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
+                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
+                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
 
-  
+
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings: ["front-end developer", "coder", "designer"],
+            strings: ["front-end developer", "coder", "designer", "UI/UX Designer"],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
