--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./img/bg.jpg" type="image/x-icon">
-    <title>Jerush Lamshal</title>
+    <title>Jerusha Lamsal</title>
 </head>
 
 <body>
@@ -79,7 +79,7 @@
 
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <div class="">
-                        <img src="img//jerush Lamshal.png" class="img-thumbnail w-100" alt="...">
+                        <img src="img//jerusha Lamsal.png" class="img-thumbnail w-100" alt="...">
                     </div>
                 </div>
             </div>
