--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <span class="topline">Hello</span>
                     <h1>I'm <span class="multiText text-danger"></span></h1>
-                    <p>Hi! I'm Jerusha Lamsal.
+                    <p>Hi! I'm Jerusha Lamsal .
                     </p>
 
                     <p>I'm a web developer from Pokhara, Nepal, with a passion for playing with
@@ -79,7 +79,7 @@
 
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <div class="">
-                        <img src="img//jerush Lamshal.png" class="img-thumbnail w-100" alt="...">
+                        <img src="img/jerush Lamshal.png" class="img-thumbnail w-100" alt="...">
                     </div>
                 </div>
             </div>
@@ -91,8 +91,8 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h5>Jerush Lamshal</h5>
-                    <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
+                    <h5>Jerusha Lamsal </h5>
+                    <p> Hi, I'm Jerusha Lamsal , a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
                         designing, with a strong focus on learning new technologies and effective management. I excel in
                         researching innovative solutions and enjoy collaborative team environments.</p>
                 </div>
