--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./img/bg.jpg" type="image/x-icon">
-    <title>Jerush Lamshal</title>
+    <title>Jerusha Lamsal </title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- navbar section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="#">Jerush Lamshal</a>
+            <a class="navbar-brand" href="#">Jerusha Lamsal </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -96,7 +96,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <h5>Jerush Lamshal</h5>
+                    <h5>Jerusha Lamsal </h5>
                     <p> Hi, I'm Jerusha Lamsal, a UI/UX Designer from Pokhara, Nepal. I specialize in developing and
                         designing, with a strong focus on learning new technologies and effective management. I excel in
                         researching innovative solutions and enjoy collaborative team environments.</p>
