--- a/resume.html
+++ b/resume.html
@@ -138,6 +138,12 @@
                                 <li><i class="fa fa-check"></i> Adobe XD</li>
                             </ul>
                         </div>
+                        <div class="col-md-6">
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check"></i> Leadership and communication</li>
+                                <li><i class="fa fa-check"></i> Teamwork and Collaboration.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,11 +156,32 @@
                     <ul class="list-unstyled">
                         <li>
                             <h5>Porfolio</h5>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>mplemented Personal Portfolio Website</p>
                         </li>
                         <li>
-                            <h5>Project Title</h5>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <h5>Online Food Ordering System</h5>
+                            <p>Online Food Ordering System</p>
+                        </li>
+                        <li>
+                            <h5>Class Attendance Management System</h5>
+                            <p>Class Attendance Management System</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Achivement section -->
+            <div class="row mb-4">
+                <div class="col">
+                    <h3>Achivement</h3>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li>
+                            <h5>Word Camp Nepal 2024</h5>
+                            <p>Achieved Certificate for participating in Gandaki University International Conference and Word Camp Nepal 2024</p>
+                        </li>
+                        <li>
+                            <h5>1st Runner Up, Hult Prize Gandaki University 23-24</h5>
+                            <p>Secured 1st Runner Up in OnCampus Idea Pitching Competition at Hult Prize Gandaki University 23-24.</p>
                         </li>
                     </ul>
                 </div>
