--- a/contact.html
+++ b/contact.html
@@ -61,133 +61,48 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Resume</li>
+                    <li class="breadcrumb-item active" aria-current="page">Contact</li>
                 </ol>
             </nav>
         </div>
     </section>
     <!-- breadcrumb section -->
 
-    <!-- resume section -->
+    <!-- contact section -->
     <section class="py-5 bg-light">
         <div class="container">
-            <div class="row mb-4">
-                <div class="col text-center">
-                    <h2 class="display-4">Resume</h2>
-                    <p class="">Jerusha Lamsal - Front-end Developer, Coder, Designer</p>
-                </div>
-            </div>
-
-            <!-- Education section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Education</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Bachelor of Information Technology</h5>
-                            <p>XYZ University, 2018 - 2022</p>
-                        </li>
-                        <li>
-                            <h5>Higher Secondary Education</h5>
-                            <p>ABC College, 2016 - 2018</p>
-                        </li>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Contact Information</h3>
+                    <p>Feel free to reach out to me using the contact information below:</p>
+                    <ul>
+                        <li><i class="fa fa-envelope"></i> Email: jerusha@gmail.com</li>
+                        <li><i class="fa fa-phone"></i> Phone: 9868000000</li>
+                        <li><i class="fa fa-map-marker"></i> Address: Pokhara, Kaski, Nepal, 33700</li>
                     </ul>
                 </div>
-            </div>
-
-            <!-- Experience section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Experience</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Front-end Developer</h5>
-                            <p>XYZ Company, 2022 - Present</p>
-                            <p>Responsible for designing and implementing user interfaces for web applications.</p>
-                        </li>
-                        <li>
-                            <h5>Intern Developer</h5>
-                            <p>ABC Corporation, 2021 - 2022</p>
-                            <p>Assisted in the development and maintenance of the company website.</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Skills section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Skills</h3>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> HTML, CSS, JavaScript</li>
-                                <li><i class="fa fa-check"></i> PHP</li>
-                                <li><i class="fa fa-check"></i> MYSQL, SQL</li>
-                                <li><i class="fa fa-check"></i> Bootstrap</li>
-                            </ul>
+                <div class="col-md-6">
+                    <h3>Get in-Touch</h3>
+                    <form action="#" method="POST">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
                         </div>
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> Figma</li>
-                                <li><i class="fa fa-check"></i> Git, GitHub</li>
-                                <li><i class="fa fa-check"></i> Adobe XD</li>
-                            </ul>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
                         </div>
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> Leadership and communication</li>
-                                <li><i class="fa fa-check"></i> Teamwork and Collaboration.</li>
-                            </ul>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Projects section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Projects</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Porfolio</h5>
-                            <p>mplemented Personal Portfolio Website</p>
-                        </li>
-                        <li>
-                            <h5>Online Food Ordering System</h5>
-                            <p>Online Food Ordering System</p>
-                        </li>
-                        <li>
-                            <h5>Class Attendance Management System</h5>
-                            <p>Class Attendance Management System</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- Achivement section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Achivement</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Word Camp Nepal 2024</h5>
-                            <p>Achieved Certificate for participating in Gandaki University International Conference and Word Camp Nepal 2024</p>
-                        </li>
-                        <li>
-                            <h5>1st Runner Up, Hult Prize Gandaki University 23-24</h5>
-                            <p>Secured 1st Runner Up in OnCampus Idea Pitching Competition at Hult Prize Gandaki University 23-24.</p>
-                        </li>
-                    </ul>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
-    <!-- resume section -->
+    <!-- contact section -->
     <footer class="bg-white">
         <div class="container py-5">
             <div class="row">
