--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         in a team that entertains themselves and focuses on self-education.</p>
                     <div class="d-flex">
                         <a class="btn btn-primary btn-sm me-2" download href="resume.html" role="button">Resume </a>
-                        <a class="btn btn-primary btn-sm me-2" href="#" role="button"> Hire Me</a>
+                        <a class="btn btn-primary btn-sm me-2" href="contact.html" role="button"> Hire Me</a>
                         <a class="btn btn-primary btn-sm me-2" href="about.html" role="button"> About Me</a>
                     </div>
                 </div>
