--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <div class="">
-                        <img src="img/jerusha Lamsal.png" class="img-thumbnail w-100" alt="...">
+                        <img src="img/Jerusha Lamsal.png" class="img-thumbnail w-100" alt="...">
                     </div>
                 </div>
             </div>
