--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         in a team that entertains themselves and focuses on self-education.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="img/Jerusha Lamsal.png" alt="About Me" class="img-fluid">
+                    <img src="img/JerushaLamsal.png" alt="About Me" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -107,6 +107,8 @@
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
                         <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
+                        <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
+                        <li><a class="text-decoration-none" href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
