--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,8 @@
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
                         <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
+                        <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
+                        <li><a class="text-decoration-none" href="portfolio.html">Portfolio</a></li>
 
                     </ul>
                 </div>
