--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class=" col-lg-6 col-md-6 col-sm-12 mb-3 ">
                     <div class="">
-                        <img src="img/Jerusha Lamsal.png" class="img-thumbnail w-100" alt="...">
+                        <img src="img/JerushaLamsal.png" class="img-thumbnail w-100" alt="...">
                     </div>
                 </div>
             </div>
@@ -103,6 +103,8 @@
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
                         <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
+                        <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
+                        <li><a class="text-decoration-none" href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
