--- a/portfolio.html
+++ b/portfolio.html
@@ -61,133 +61,59 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Resume</li>
+                    <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
                 </ol>
             </nav>
         </div>
     </section>
     <!-- breadcrumb section -->
 
-    <!-- resume section -->
-    <section class="py-5 bg-light">
-        <div class="container">
+    <!-- portfolio section -->
+    <section class="bg-light">
+        <div class="container py-5">
             <div class="row mb-4">
                 <div class="col text-center">
-                    <h2 class="display-4">Resume</h2>
-                    <p class="">Jerusha Lamsal - Front-end Developer, Coder, Designer</p>
+                    <h2 class="display-4">Portfolio</h2>
+                    <p class="">Some Projects</p>
                 </div>
             </div>
-
-            <!-- Education section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Education</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Bachelor of Information Technology</h5>
-                            <p>XYZ University, 2018 - 2022</p>
-                        </li>
-                        <li>
-                            <h5>Higher Secondary Education</h5>
-                            <p>ABC College, 2016 - 2018</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Experience section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Experience</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Front-end Developer</h5>
-                            <p>XYZ Company, 2022 - Present</p>
-                            <p>Responsible for designing and implementing user interfaces for web applications.</p>
-                        </li>
-                        <li>
-                            <h5>Intern Developer</h5>
-                            <p>ABC Corporation, 2021 - 2022</p>
-                            <p>Assisted in the development and maintenance of the company website.</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Skills section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Skills</h3>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> HTML, CSS, JavaScript</li>
-                                <li><i class="fa fa-check"></i> PHP</li>
-                                <li><i class="fa fa-check"></i> MYSQL, SQL</li>
-                                <li><i class="fa fa-check"></i> Bootstrap</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> Figma</li>
-                                <li><i class="fa fa-check"></i> Git, GitHub</li>
-                                <li><i class="fa fa-check"></i> Adobe XD</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> Leadership and communication</li>
-                                <li><i class="fa fa-check"></i> Teamwork and Collaboration.</li>
-                            </ul>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <div class="card">
+                        <img src="./img/app 44.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-subtitle">Doctor Appoitment App</h5>
+                            <p class="card-text">Doctor Appoitment App</p>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- Projects section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Projects</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Porfolio</h5>
-                            <p>mplemented Personal Portfolio Website</p>
-                        </li>
-                        <li>
-                            <h5>Online Food Ordering System</h5>
-                            <p>Online Food Ordering System</p>
-                        </li>
-                        <li>
-                            <h5>Class Attendance Management System</h5>
-                            <p>Class Attendance Management System</p>
-                        </li>
-                    </ul>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <div class="card">
+                        <img src="./img/app 4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-subtitle">Coffee Shop </h5>
+                            <p class="card-text">One of the best coffee shop App</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <!-- Achivement section -->
-            <div class="row mb-4">
-                <div class="col">
-                    <h3>Achivement</h3>
-                    <hr>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h5>Word Camp Nepal 2024</h5>
-                            <p>Achieved Certificate for participating in Gandaki University International Conference and Word Camp Nepal 2024</p>
-                        </li>
-                        <li>
-                            <h5>1st Runner Up, Hult Prize Gandaki University 23-24</h5>
-                            <p>Secured 1st Runner Up in OnCampus Idea Pitching Competition at Hult Prize Gandaki University 23-24.</p>
-                        </li>
-                    </ul>
-                </div>
+                <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <div class="card">
+                        <img src="./img/bg.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-subtitle">Project 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <a href="#" class="btn btn-primary">View</a>
+                        </div>
+                    </div>
+                </div> -->
             </div>
         </div>
     </section>
-    <!-- resume section -->
+    <!-- portfolio section -->
+
+
+
+    <!-- contact section -->
     <footer class="bg-white">
         <div class="container py-5">
             <div class="row">
