--- a/skills.html
+++ b/skills.html
@@ -115,6 +115,8 @@
                         <li><a class="text-decoration-none" href="about.html">About</a></li>
                         <li><a class="text-decoration-none" href="skills.html">Skills</a></li>
                         <li><a class="text-decoration-none" href="resume.html">Resume</a></li>
+                        <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
+                        <li><a class="text-decoration-none" href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
